# LoopSniff

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
app/: main.py
examples/: funcs.py  iter_t.py  set_add.py  set_list.py
tests/: test_all.py
