[project]
name = "loopsniff"
version = "0.1.0"
description = ""
authors = [
    { name = "Jiri Otoupal", email = "jiri-otoupal@ips-database.eu" }
]
readme = "README.md"
requires-python = ">3.10"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "rich (>=13.9.4,<14.0.0)"
]

[tool.poetry.scripts]
loopsniff = "app.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
